# TVVK-Messenger

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  contacts.py  messages.py  users.py
app/core/: config.py  security.py
app/core/security/: asymmetric_encryption.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 45b384865eb6_created_messages_table.py  a33b370b1c5c_add_encrypted_content_sender_to_.py  b8a54f81fdab_create_contacts_table.py  c843abc6a599_add_public_key_to_users_table.py  d9130cc333d3_create_users_table.py
app/db/models/: __init__.py  contact.py  message.py  user.py
app/schemas/: contact.py  message.py  user.py
