[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["Chthonic-Galaxy <162060169+Chthonic-Galaxy@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
